<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="enter_amount">Enter amount</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="tip_label">Tip:</string>
    <string name="total_label">Total:</string>
    <string name="different_tip">Choose a different tip amount:</string>
    <string name="calculate">Calculate</string>
    <string name="percent">%s%%</string>
    <string name="invalid_input">Amount cannot be empty or negative</string>
    
</resources>
