<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipEntry" >

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_amount" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn15"
        android:onClick="onFifteenPercentClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn10"
        android:layout_alignBottom="@+id/btn10"
        android:layout_centerHorizontal="true"
        android:text="@string/fifteen_percent" />

    <Button
        android:id="@+id/btn10"
        android:onClick="onTenPercentClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAmount"
        android:layout_marginTop="58dp"
        android:layout_toLeftOf="@+id/btn15"
        android:text="@string/ten_percent" />

    <Button
        android:id="@+id/btn20"
        android:onClick="onTwentyPercentClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15"
        android:layout_alignBottom="@+id/btn15"
        android:layout_toRightOf="@+id/btn15"
        android:text="@string/twenty_percent" />

    <TextView
        android:id="@+id/lblTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btn15"
        android:layout_marginBottom="80dp"
        android:layout_marginRight="43dp"
        android:text="@string/tip_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etDifferentTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etAmount"
        android:layout_below="@+id/btn15"
        android:layout_marginTop="51dp"
        android:layout_toLeftOf="@+id/btnCalculate"
        android:ems="10"
        android:hint="@string/different_tip" />

    <Button
        android:id="@+id/btnCalculate"
        android:onClick="onCalculateClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etDifferentTip"
        android:layout_alignRight="@+id/etAmount"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/lblTipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblTip"
        android:layout_alignBottom="@+id/lblTip"
        android:layout_toLeftOf="@+id/btnCalculate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
